--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@angular/platform-browser": "^11.2.14",
     "@angular/platform-browser-dynamic": "^11.2.14",
     "@angular/router": "^11.2.14",
-    "@ionic/angular": "^5.6.9",
+    "@ionic/angular": "^5.6.12",
     "angularx-social-login": "^3.5.7",
     "express": "^4.17.1",
     "flag-icon-css": "^3.5.0",
-    "google-libphonenumber": "^3.2.21",
+    "google-libphonenumber": "^3.2.22",
     "ion-intl-tel-input": "^1.0.5",
     "ionic-selectable": "^4.9.0",
     "jwt-decode": "^3.1.2",
@@ -46,11 +46,11 @@
     "@angular/language-service": "^11.2.14",
     "@ionic/angular-toolkit": "^3.1.1",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.20.15",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.17",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
@@ -61,10 +61,10 @@
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "^4.0.8"
+    "typescript": "^4.1.6"
   },
   "description": "An Ionic project"
 }
