--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/common": "^11.2.14",
     "@angular/core": "^11.2.14",
     "@angular/forms": "^11.2.14",
     "@angular/platform-browser": "^11.2.14",
     "@angular/platform-browser-dynamic": "^11.2.14",
     "@angular/router": "^11.2.14",
+    "@angular/service-worker": "^11.2.14",
+    "@google/maps": "^1.1.3",
     "@ionic/angular": "^5.6.9",
     "angularx-social-login": "^3.5.7",
     "express": "^4.17.1",
@@ -45,6 +48,7 @@
     "@angular/compiler-cli": "^11.2.14",
     "@angular/language-service": "^11.2.14",
     "@ionic/angular-toolkit": "^3.1.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.20.15",
