--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,23 +1,52 @@
-# This file specifies files that are *not* uploaded to Google Cloud Platform
-# using gcloud. It follows the same syntax as .gitignore, with the addition of
-# "#!include" directives (which insert the entries of the given .gitignore-style
-# file at that point).
-#
-# For more information, run:
-#   $ gcloud topic gcloudignore
-#
-.gcloudignore
-# If you would like to upload your .git directory, .gitignore file or files
-# from your .gitignore file, remove the corresponding line
-# below:
-.git
-.gitignore
-
-# Node.js dependencies:
-node_modules/
-/e2e
-/src
-/ssl
-.editorconfig
-karma.conf.js
-.eslintrc.json
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+ 
+# compiled output
+/dist
+/tmp
+/out-tsc
+# Only exists if Bazel was run
+/bazel-out
+ 
+# dependencies
+/node_modules
+ 
+# profiling files
+chrome-profiler-events*.json
+speed-measure-plugin*.json
+ 
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+ 
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+/google-cloud-sdk/
+composer.phar
+cloud_sql_proxy
+ 
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+ 
+# System Files
+.DS_Store
+Thumbs.db
+workspace.code-workspace
+cloud_sql_proxy
+vendor/*
