--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:local": "ionic serve --ssl",
-    "build": "ng build --prod",
+    "start:local": "ionic serve --ssl --proxy-config ./src/proxy.conf.json",
+    "build": "ng build --prod --proxy-config ./src/proxy.conf.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
