--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,13 +35,24 @@
             "prefix": "app",
             "style": "camelCase"
           }
+        ],
+        "@typescript-eslint/naming-convention": [
+          "error",
+          {
+            "selector": "default",
+            "format": [
+              "camelCase",
+              "snake_case",
+              "PascalCase"
+            ]
+          }
         ]
       }
     },
     {
       "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
-      "rules": {}
+      "rules": { }
     }
   ]
 }
